--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     "jspdf": "https://esm.sh/jspdf@^2.5.1",
     "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.10.38",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.37.0"
   }
 }
 </script>
